enhance app.go and ibc.go to integrate wasm module and its CLI commands
* update .gitignore to include additional file types and modify config.yml for stake values. Ensuring proper registration and configuration.
 * update OpenAPI documentation for new endpoints and parameters.


Former-commit-id: e5863c75633dfbb5950e78dcca20c242316ffe68

--- a/config.yml
+++ b/config.yml
@@ -16,7 +16,7 @@ faucet:
   name: bob
   coins:
   - 5token
-  - 100000stake
+  - 1000000000stake
 validators:
 - name: alice
   bonded: 100000000stake
@@ -25,4 +25,5 @@ validators:
 - name: validator2
   bonded: 200000000stake
 - name: validator3
-  bonded: 300000000stake
+  bonded: 300000000stake56789
+  
