Update .gitignore to exclude binary files and build artifacts
Former-commit-id: 92fb2f747b4bda9f5108ef17d8148c586be914cb

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,25 @@ release/
 *.ign
 *.key
 *.wasm
-wasmfiles
-wasm
+wasmfiles/
+wasm/
 *.txt
 build/
+bin/
+# Binary files
+/sdknewd
+sdknew
+# Golang specific ignores
+vendor/
+*.o
+*.a
+*.so
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.dylib
+# Test binary, built with `go test -c`
+*.test
+# Output of the go coverage tool
+*.out
